src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>HPP_Product_code__c</fullName>
        <label>HPP Product code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S01109</fullName>
                </value>
                <value>
                    <fullName>FIXF01104</fullName>
                </value>
                <value>
                    <fullName>BTLS111111</fullName>
                </value>
                <value>
                    <fullName>BTLRO11111</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPP_Type__c</fullName>
        <label>HPP Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Property purchase</fullName>
                </value>
                <value>
                    <fullName>Remortgaging</fullName>
                </value>
                <value>
                    <fullName>Equity release.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code2__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X5_Year_NPV__c</fullName>
        <label>5 Year NPV</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Profit__c</fullName>
        <label>Year 1 Profit</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Year_1_Profit__c</columns>
        <columns>X5_Year_NPV__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Value_view</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Year_1_Profit__c</columns>
        <columns>X5_Year_NPV__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year_1_Profit__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>X5_Year_NPV__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Value view</label>
    </listViews>
</CustomObject>